ADD google login button and ui

--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,10 @@
 .table-textfield {
     width: 50px !important;
 }
+.login {
+  
+
+}
 html>body{font-family:'Roboto','Helvetica','Arial',sans-serif!important;}
 
 /* Enter and leave animations can use different */
@@ -25,6 +29,6 @@ html>body{font-family:'Roboto','Helvetica','Arial',sans-serif!important;}
 
 .center-elements {
   display:flex; 
-  justify-content: 
-  center;align-items: center;
+  justify-content: center;
+  align-items: center;
 }
