--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,15 @@
 
 html>body{font-family:'Roboto','Helvetica','Arial',sans-serif!important;}
 
+body {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE 10+ */
+}
+body::-webkit-scrollbar { /* WebKit */
+    width: 0px;
+}
+
 /* Enter and leave animations can use different */
 /* durations and timing functions.              */
 .slide-fade-enter-active {
