Add more information about the process
- display density information
- display timestamp
- fix data deletion
- add upload button
- change water to volumetric water content

--- a/style/main.css
+++ b/style/main.css
@@ -55,3 +55,8 @@ body::-webkit-scrollbar { /* WebKit */
     width: 100%;
     margin: -10px 0;
 }
+
+th{
+  text-align: center !important;
+  vertical-align: middle !important;
+}
